<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_gradient_background"
    android:paddingHorizontal="24dp"
    android:paddingVertical="36dp"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/greet_register"
            android:textColor="@color/ghost_white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/email"
            android:textColor="@color/ghost_white"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/ubuntu_regular"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            android:textColor="@color/ghost_white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/password"
            android:textColor="@color/ghost_white"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/ubuntu_regular"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:textColor="@color/ghost_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/already_have_account"
                android:textColor="@color/ghost_white" />

            <Space
                android:layout_width="4dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/login"
                android:text="@string/login"
                android:textColor="@color/ghost_white" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>